--- a/Customer_Project_Administration_Application/Views/Customer/Create.cshtml
+++ b/Customer_Project_Administration_Application/Views/Customer/Create.cshtml
@@ -1,11 +1,11 @@
-﻿@model Customer_Project_Administration_Application.ViewModels.CustomerFolder.EditCustomerViewModel
+﻿@model Customer_Project_Administration_Application.ViewModels.CustomerFolder.CreateCustomerViewModel
 
 @{
-    ViewData["Title"] = "Edit Customer";
+    ViewData["Title"] = "Create Customer";
 }
 <div class="card">
     <div class="card-header">
-        <h1>Edit Customer</h1>
+        <h1>Create Customer</h1>
     </div>
     <div class="card-body">
         <form method="post">
@@ -14,7 +14,8 @@
                 <input class="form-control" asp-for="Name" />  
                 <span asp-validation-for="Name" class="field-validation-error text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-primary">Save</button>
+            <button class="btn btn-primary" type="submit" >Add Customer</button>
         </form>
+
     </div>
 </div>
