--- a/Customer_Project_Administration_Application/Views/Customer/Index.cshtml
+++ b/Customer_Project_Administration_Application/Views/Customer/Index.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "All Customers";
 }
 
-<h1>Alla spelare </h1>
+<h1>All Customers </h1>
 <table class="table">
 <tr>
     <th>Id</th>
@@ -19,10 +19,14 @@
         <tr>
             <td>@cust.Id</td>
             <td>@cust.Name</td>
-            <td><i class='bx bxs-edit-alt' text-primary><a asp-controller="Customer" asp-action="Edit" asp-route-id="@cust.Id"></a></i></td>
-            <td><i class='bx bxs-message-square-x text-danger'><a  asp-controller="Customer" asp-action="Delete" asp-route-id="@cust.Id"></a></i></td>
+            <td><a asp-controller="Customer" asp-action="Edit" asp-route-id="@cust.Id"><i class='bx bxs-edit-alt' text-primary></i></a></td>
+            <td>
+                <form method="post">
+                    <button class="border-0 bg-transparent" asp-controller="Customer" asp-action="Delete" asp-route-id="@cust.Id" type="submit"> <i class='bx bxs-message-square-x text-danger'></i></button>
+                </form>
+            </td>
         </tr>
     }
 </table>
-<a class="btn btn-primary" asp-controller="Customer" asp-action="New">Add Customer</a>
+<a class="btn btn-primary" asp-controller="Customer" asp-action="Create">Add Customer</a>
 
