--- a/Customer_Project_Administration_Application/Views/Project/Create.cshtml
+++ b/Customer_Project_Administration_Application/Views/Project/Create.cshtml
@@ -1,17 +1,18 @@
 ﻿@using Customer_Project_Administration_Application.ViewModels.ProjectFolder
-@model Customer_Project_Administration_Application.ViewModels.ProjectFolder.EditProjectViewModel
+@using Customer_Project_Administration_Application.Controllers
+@model Customer_Project_Administration_Application.ViewModels.ProjectFolder.CreateProjectViewModel
 
 @{
-    ViewData["Title"] = "Edit player";
+    ViewData["Title"] = "New Project";
 }
 <div class="card">
     <div class="card-header">
-        <h1>Edit Project</h1>
+        <h1>Create Project</h1>
     </div>
     <div class="card-body">
         <form method="post">
             <div class="form-group">
-                <label asp-for="Name">Name</label>
+                <label asp-for="Name">Namn</label>
                 <input class="form-control" asp-for="Name" />  
                 <span asp-validation-for="Name" class="field-validation-error text-danger"></span>
             </div>
@@ -20,9 +21,9 @@
                 <select class="form-control" asp-for="CustomerId" asp-items="@Model.Customers">
                 </select>
                 <span asp-validation-for="CustomerId" class="field-validation-error text-danger fw-bolder"></span>
+                
             </div>
             <button type="submit" class="btn btn-primary my-3">Save</button>
-
         </form>
 
     </div>
